apps/flutter/native/bridge.h

// --- Player List ---

/// Number of players online.
int ao_player_count(void);
/// Get player ID at list index.
int ao_player_id(int index);
/// Get player display name at list index.
const char* ao_player_name(int index);
/// Get player character name at list index.
const char* ao_player_character(int index);
/// Get player charname (showname) at list index.
const char* ao_player_charname(int index);
/// Get player area ID at list index (-1 if unknown).
int ao_player_area(int index);
// --- Evidence ---

/// Number of evidence items.
int ao_evidence_count(void);
/// Get evidence name at index.
const char* ao_evidence_name(int index);
/// Get evidence description at index.
const char* ao_evidence_description(int index);
/// Get evidence image filename at index.
const char* ao_evidence_image(int index);
// --- Health Bars ---

/// Get defense HP (0-10).
int ao_hp_defense(void);
/// Get prosecution HP (0-10).
int ao_hp_prosecution(void);
/// Set a health bar value (publishes OutgoingHealthBarEvent).
/// @param side  1 = defense, 2 = prosecution.
/// @param value 0-10.
void ao_hp_set(int side, int value);
// --- Timers ---

/// Get the number of timer slots (fixed at 4).
int ao_timer_count(void);
/// Whether timer at index is visible.
bool ao_timer_visible(int index);
/// Whether timer at index is running.
bool ao_timer_running(int index);
/// Get timer remaining time in milliseconds.
int64_t ao_timer_remaining_ms(int index);
// --- Server Info ---

/// Get server software name (empty if not yet received).
const char* ao_server_info_software(void);
/// Get server version string.
const char* ao_server_info_version(void);
/// Get assigned player number.
int ao_server_info_player_num(void);
// --- Player Count ---

/// Get current player count on connected server.
int ao_player_count_current(void);
/// Get max player count on connected server.
int ao_player_count_max(void);
/// Get server description from PN packet.
const char* ao_player_count_description(void);
// --- Volume ---

/// Set volume for a category (0=music, 1=sfx, 2=blip, 3=master).
/// @param category Volume category index.
/// @param volume   0.0 to 1.0 amplitude.
void ao_volume_set(int category, float volume);
// --- Navigation ---

/// Pop the current screen (e.g. courtroom → char select).
void ao_nav_pop(void);
/// Pop to root (e.g. courtroom → server list, disconnects).
void ao_nav_pop_to_root(void);