apps/flutter/lib/bridge/native_bridge.dart


// Player list
final _playerCount = _lib.lookupFunction<_GetIntNative, _GetIntDart>('ao_player_count');
final _playerId = _lib.lookupFunction<_GetIntByIdxNative, _GetIntByIdxDart>('ao_player_id');
final _playerName = _lib.lookupFunction<_GetStringByIdxNative, _GetStringByIdxDart>('ao_player_name');
final _playerCharacter = _lib.lookupFunction<_GetStringByIdxNative, _GetStringByIdxDart>('ao_player_character');
final _playerCharname = _lib.lookupFunction<_GetStringByIdxNative, _GetStringByIdxDart>('ao_player_charname');
final _playerArea = _lib.lookupFunction<_GetIntByIdxNative, _GetIntByIdxDart>('ao_player_area');

// Evidence
final _evidenceCount = _lib.lookupFunction<_GetIntNative, _GetIntDart>('ao_evidence_count');
final _evidenceName = _lib.lookupFunction<_GetStringByIdxNative, _GetStringByIdxDart>('ao_evidence_name');
final _evidenceDescription = _lib.lookupFunction<_GetStringByIdxNative, _GetStringByIdxDart>('ao_evidence_description');
final _evidenceImage = _lib.lookupFunction<_GetStringByIdxNative, _GetStringByIdxDart>('ao_evidence_image');

// Health bars
final _hpDefense = _lib.lookupFunction<_GetIntNative, _GetIntDart>('ao_hp_defense');
final _hpProsecution = _lib.lookupFunction<_GetIntNative, _GetIntDart>('ao_hp_prosecution');
final _hpSet = _lib.lookupFunction<Void Function(Int32, Int32), void Function(int, int)>('ao_hp_set');

// Timers
final _timerCount = _lib.lookupFunction<_GetIntNative, _GetIntDart>('ao_timer_count');
final _timerVisible = _lib.lookupFunction<_GetBoolByIdxNative, _GetBoolByIdxDart>('ao_timer_visible');
final _timerRunning = _lib.lookupFunction<_GetBoolByIdxNative, _GetBoolByIdxDart>('ao_timer_running');
final _timerRemainingMs = _lib.lookupFunction<Int64 Function(Int32), int Function(int)>('ao_timer_remaining_ms');

// Server info
final _serverInfoSoftware = _lib.lookupFunction<_GetStringNative, _GetStringDart>('ao_server_info_software');
final _serverInfoVersion = _lib.lookupFunction<_GetStringNative, _GetStringDart>('ao_server_info_version');
final _serverInfoPlayerNum = _lib.lookupFunction<_GetIntNative, _GetIntDart>('ao_server_info_player_num');

// Player count
final _playerCountCurrent = _lib.lookupFunction<_GetIntNative, _GetIntDart>('ao_player_count_current');
final _playerCountMax = _lib.lookupFunction<_GetIntNative, _GetIntDart>('ao_player_count_max');
final _playerCountDescription = _lib.lookupFunction<_GetStringNative, _GetStringDart>('ao_player_count_description');

// Volume
final _volumeSet = _lib.lookupFunction<Void Function(Int32, Float), void Function(int, double)>('ao_volume_set');

// Navigation
final _navPop = _lib.lookupFunction<_VoidNative, _VoidDart>('ao_nav_pop');
final _navPopToRoot = _lib.lookupFunction<_VoidNative, _VoidDart>('ao_nav_pop_to_root');

// ---------------------------------------------------------------------------
// Public Dart API — wraps the raw FFI calls with Dart-friendly types
// ---------------------------------------------------------------------------

class AoBridge {
  static void init(String? basePath) {
    final ptr = basePath != null ? basePath.toNativeUtf8() : nullptr;
    _init(ptr);
    if (ptr != nullptr) calloc.free(ptr);
  }

  static void shutdown() => _shutdown();
  static void tick() => _tick();

  // Renderer
  static void rendererCreate(int w, int h, {bool useMetal = false}) =>
      _rendererCreate(w, h, useMetal);
  static void rendererDraw() => _rendererDraw();
  static int rendererGetTexture() => _rendererGetTexture();
  static void rendererResize(int w, int h) => _rendererResize(w, h);

  // Active screen
  static String activeScreenId() => _safeString(_activeScreenId());

  // Server list
  static int serverCount() => _serverCount();
  static String serverName(int i) => _safeString(_serverName(i));
  static String serverDescription(int i) => _safeString(_serverDescription(i));
  static int serverPlayers(int i) => _serverPlayers(i);
  static bool serverHasWs(int i) => _serverHasWs(i);
  static int serverSelected() => _serverSelected();
  static void serverSelect(int i) => _serverSelect(i);

  static void serverDirectConnect(String host, int port) {
    final h = host.toNativeUtf8();
    _serverDirectConnect(h, port);
    calloc.free(h);
  }

  // Character select
  static int charCount() => _charCount();
  static String charFolder(int i) => _safeString(_charFolder(i));
  static bool charTaken(int i) => _charTaken(i);
  static bool charIconReady(int i) => _charIconReady(i);
  static int charIconWidth(int i) => _charIconWidth(i);
  static int charIconHeight(int i) => _charIconHeight(i);
  static Pointer<Uint8> charIconPixels(int i) => _charIconPixels(i);
  static int charSelected() => _charSelected();
  static void charSelect(int i) => _charSelect(i);

  // Courtroom
  static String courtroomCharacter() => _safeString(_courtroomCharacter());
  static int courtroomCharId() => _courtroomCharId();
  static bool courtroomLoading() => _courtroomLoading();
  static int courtroomEmoteCount() => _courtroomEmoteCount();
  static String courtroomEmoteComment(int i) => _safeString(_courtroomEmoteComment(i));
  static bool courtroomEmoteIconReady(int i) => _courtroomEmoteIconReady(i);
  static int courtroomEmoteIconWidth(int i) => _courtroomEmoteIconWidth(i);
  static int courtroomEmoteIconHeight(int i) => _courtroomEmoteIconHeight(i);
  static Pointer<Uint8> courtroomEmoteIconPixels(int i) => _courtroomEmoteIconPixels(i);

  // IC chat
  static void icSend(String message) {
    final m = message.toNativeUtf8();
    _icSend(m);
    calloc.free(m);
  }

  static void icSetEmote(int i) => _icSetEmote(i);
  static void icSetSide(int i) => _icSetSide(i);

  static void icSetShowname(String name) {
    final n = name.toNativeUtf8();
    _icSetShowname(n);
    calloc.free(n);
  }

  static void icSetPre(bool v) => _icSetPre(v);
  static void icSetFlip(bool v) => _icSetFlip(v);
  static void icSetInterjection(int t) => _icSetInterjection(t);
  static void icSetColor(int c) => _icSetColor(c);
  static String icGetShowname() => _safeString(_icGetShowname());
  static int icGetSide() => _icGetSide();

  // OOC chat
  static void oocSend(String name, String message) {
    final n = name.toNativeUtf8();
    final m = message.toNativeUtf8();
    _oocSend(n, m);
    calloc.free(n);
    calloc.free(m);
  }

  static List<({String name, String text})> oocMessages() {
    final count = _oocMessageCount();
    final msgs = <({String name, String text})>[];
    for (var i = 0; i < count; i++) {
      msgs.add((
        name: _safeString(_oocMessageName(i)),
        text: _safeString(_oocMessageText(i)),
      ));
    }
    _oocMessagesConsume();
    return msgs;
  }

  // IC log
  static List<({String showname, String message})> icLog() {
    final count = _icLogCount();
    final entries = <({String showname, String message})>[];
    for (var i = 0; i < count; i++) {
      entries.add((
        showname: _safeString(_icLogShowname(i)),
        message: _safeString(_icLogMessage(i)),
      ));
    }
    _icLogConsume();
    return entries;
  }

  // Music & Areas
  static int musicCount() => _musicCount();
  static String musicName(int i) => _safeString(_musicName(i));
  static void musicPlay(int i) => _musicPlay(i);

  static void musicPlayByName(String name) {
    final n = name.toNativeUtf8();
    _musicPlayByName(n);
    calloc.free(n);
  }

  static int areaCount() => _areaCount();
  static String areaName(int i) => _safeString(_areaName(i));
  static int areaPlayers(int i) => _areaPlayers(i);
  static String areaStatus(int i) => _safeString(_areaStatus(i));
  static String areaCm(int i) => _safeString(_areaCm(i));
  static String areaLock(int i) => _safeString(_areaLock(i));
  static String nowPlaying() => _safeString(_nowPlaying());

  // Disconnect
  static bool disconnectPending() => _disconnectPending();
  static String disconnectReason() => _safeString(_disconnectReason());
  static void disconnectConsume() => _disconnectConsume();

  // Player list
  static int playerCount() => _playerCount();
  static int playerId(int i) => _playerId(i);
  static String playerName(int i) => _safeString(_playerName(i));
  static String playerCharacter(int i) => _safeString(_playerCharacter(i));
  static String playerCharname(int i) => _safeString(_playerCharname(i));
  static int playerArea(int i) => _playerArea(i);

  // Evidence
  static int evidenceCount() => _evidenceCount();
  static String evidenceName(int i) => _safeString(_evidenceName(i));
  static String evidenceDescription(int i) => _safeString(_evidenceDescription(i));
  static String evidenceImage(int i) => _safeString(_evidenceImage(i));

  // Health bars
  static int hpDefense() => _hpDefense();
  static int hpProsecution() => _hpProsecution();
  static void hpSet(int side, int value) => _hpSet(side, value);

  // Timers
  static int timerCount() => _timerCount();
  static bool timerVisible(int i) => _timerVisible(i);
  static bool timerRunning(int i) => _timerRunning(i);
  static int timerRemainingMs(int i) => _timerRemainingMs(i);

  // Server info
  static String serverInfoSoftware() => _safeString(_serverInfoSoftware());
  static String serverInfoVersion() => _safeString(_serverInfoVersion());
  static int serverInfoPlayerNum() => _serverInfoPlayerNum();

  // Player count
  static int playerCountCurrent() => _playerCountCurrent();
  static int playerCountMax() => _playerCountMax();
  static String playerCountDescription() => _safeString(_playerCountDescription());

  // Volume
  static void volumeSet(int category, double volume) => _volumeSet(category, volume);

  // Navigation
  static void navPop() => _navPop();
  static void navPopToRoot() => _navPopToRoot();
}
